# solo1-cli-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/reviews/: 20260414_000.md  20260414_0001.md  20260414_001.md
docs/reviews/20260414_000/: 0001-hid_module_refactor.md  0002-cbor_helpers_module.md  0003-duplicate_pin_token_acquisition.md  0004-duplicate_confirmation_prompts.md  0005-duplicate_bootloader_signature_selection.md  0006-decompose_large_functions.md  0007-remove_unsafe_aes_block_casting.md  0008-hmac_unwrap_in_ctap2.md  0009-attestation_security_gaps.md  0010-zero_iv_aes_not_documented.md  0011-missing_tests_program_aux.md  0012-no_mock_device_for_hid_testing.md
docs/reviews/20260414_0001/: 0003-attestation_chain_validation.md  0004-json_structured_output.md
docs/reviews/20260414_001/: 0001-async_timeout_handling.md  0002-error_message_quality.md  0004-json_structured_output.md  0005-ecdh_test_vectors.md
src/: cbor.rs  cli.rs  crypto.rs  ctap2.rs  device.rs  dfu.rs  error.rs  firmware.rs  lib.rs  main.rs  output.rs  verbose.rs
src/commands/: aux.rs  credential.rs  key.rs  mod.rs  program.rs  top.rs
src/commands/key/: common.rs  credential.rs  ctap2.rs  fido2.rs  mod.rs  ops.rs  pin.rs  probe.rs  rng.rs  update.rs  verify.rs
src/device/: frame.rs  hid.rs  mod.rs  protocol.rs
tests/: integration.rs
