[package]
name = "solo1"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with SoloKeys Solo 1 hardware security keys"
license = "MIT"

[lib]
name = "solo1"
path = "src/lib.rs"

[[bin]]
name = "solo1"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hidapi = "2"
rusb = "0.9"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
ecdsa = { version = "0.16", features = ["der"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ihex = "3"
serialport = "4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
indicatif = "0.17"
thiserror = "1"
anyhow = "1"
hex = "0.4"
rand = "0.8"
rpassword = "7"
digest = "0.10"

[dev-dependencies]
tempfile = "3"
