[package]
name = "solo1"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with SoloKeys Solo 1 hardware security keys"
license = "MIT"

[lib]
name = "solo1"
path = "src/lib.rs"

[[bin]]
name = "solo1"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hidapi = "2"
rusb = "0.9"
sha2 = "0.11"
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8", "ecdh"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ihex = "3"
serialport = "4"
reqwest = { version = "0.13", features = ["blocking", "json"] }
indicatif = "0.18"
thiserror = "2"
hex = "0.4"
rand = "0.8"
rpassword = "7"
digest = "0.11"
hmac = "0.13"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
hybrid-array = "0.4"
ciborium = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
