[package]
name = "solo1"
version = "0.2.0"
edition = "2021"
description = "CLI tool for interacting with SoloKeys Solo 1 hardware security keys"
license = "MIT"

[lib]
name = "solo1"
path = "src/lib.rs"

[[bin]]
name = "solo1"
path = "src/main.rs"

[dependencies]
aes = "0.9"
base64 = "0.22"
cbc = { version = "0.2", features = ["alloc"] }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
digest = "0.11"
hex = "0.4"
hidapi = "2"
hmac = "0.13"
hybrid-array = "0.4"
ihex = "3"
indicatif = "0.18"
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8", "ecdh"] }
rand = "0.8"
reqwest = { version = "0.13", features = ["blocking", "json"] }
rpassword = "7"
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
sha2 = "0.11"
thiserror = "2"
x509-cert = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
time = "0.3"
